Shivansh | Stage | fixed clear filter icon not visible properly on aging report page

--- a/apps/web-giddh/src/app/contact/aging-report/aging-report.component.scss
+++ b/apps/web-giddh/src/app/contact/aging-report/aging-report.component.scss
@@ -58,7 +58,7 @@
     width: 73px;
     position: relative;
     right: 1px;
-    border-color: var(--color-solitude-light);
+    border-color: var(--color-common-secondary-border);
     color: var(--color-primary-filter-button-text);
 }
 
@@ -101,11 +101,11 @@ tr.aging-table-top td {
     justify-content: center;
     align-items: center;
     background-color: var(--color-white);
-    border: 1px solid var(--color-primary-button-border);
+    border: 1px solid var(--color-common-secondary-border);
     border-radius: 5px;
     margin-left: 10px !important;
-    button {
-        filter: var(--color-image-filter-quinary);
+    .icon-refresh {
+        color: var(--color-abbey);
     }
 }
 
